# bmcli

./: .gitignore  CMakeLists.txt  PRD.md  README.md
examples/: commands.txt  targets.txt
mock/redfish/: server.py
scripts/: build.ps1  build.sh  install_toolchain.ps1  install_toolchain.sh  smoke_test.ps1  smoke_test.sh  zig-cc  zig-cc.cmd  zig-cxx  zig-cxx.cmd
src/: main.cpp
